Page Header and Navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div>
-  <app-navigation-header></app-navigation-header>
-  <app-page-header></app-page-header>
-  <div>
-    Content Here
+<div class="row" >
+  <app-navigation-header brandTitle="Inventory Management" ></app-navigation-header>
+  <div class="row">
+    <router-outlet></router-outlet>
   </div>
 </div>
 
