--- a/src/app/common/navigation-header/navigation-header.component.html
+++ b/src/app/common/navigation-header/navigation-header.component.html
@@ -1,3 +1,6 @@
-<div>
-  Navigation Header
+<div class="row">
+  <div class="nav">
+    <div class="nav__brand"> {{ brandTitle }} </div>
+    <app-navigation-menu></app-navigation-menu>
+  </div>
 </div>
