--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
-<p>
-  dashboard works!
-</p>
+<div class="page">
+    <app-page-header pageTitle="Dashboard" ></app-page-header>
+  <h1>Page Dashboard</h1>
+</div>
