--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -1,3 +1,4 @@
-<p>
-  inventories works!
-</p>
+<div class="page">
+    <app-page-header pageTitle="Inventories" ></app-page-header>
+    <h1>Inventories</h1>
+</div>
