Inveoties page functionality

--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -1,4 +1,6 @@
 <div class="page">
     <app-page-header pageTitle="Inventories" ></app-page-header>
-    <h1>Inventories</h1>
+    <div class="page__content">
+        <router-outlet></router-outlet>
+    </div>
 </div>
