--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,2 +1,6 @@
 @import "./abstract/base";
 @import "./abstract/typography";
+
+@import "./components/page";
+@import "./components/form";
+@import "./components/table";
