--- a/src/app/inventories/inventory-list/inventory-list.component.html
+++ b/src/app/inventories/inventory-list/inventory-list.component.html
@@ -1,3 +1,27 @@
-<p>
-  inventory-list works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="form-group">
+              <label class="form__label" for="search">Search Inventories</label>
+              <input class="form__input" type="text">
+              <button class="btn btn-default">Search</button>
+              <button class="btn btn-default">Advance Search</button>
+        </div>
+    </div>
+
+    <div class="row">
+        <table class="table table--bordered">
+            <thead class="table__head" >
+                <tr class="table__row">
+                    <th class="table__header"> Product </th>
+                    <th class="table__header"> Quantity </th>
+                    <th class="table__header"> Status </th>
+                    <th class="table__header"> Location </th>
+                </tr>
+            </thead>
+            <tbody class="table__body" >
+
+            </tbody>
+        </table>
+    </div>
+</div>
+
