--- a/src/scss/abstract/_base.scss
+++ b/src/scss/abstract/_base.scss
@@ -19,5 +19,5 @@ body{
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-color: rgb(244, 244, 244);
+  // background-color: rgb(244, 244, 244);
 }
