Inventory list format continue

--- a/src/app/common/page-header/page-header.component.scss
+++ b/src/app/common/page-header/page-header.component.scss
@@ -1,10 +1,10 @@
-.page-header {
+.app-page-header {
   background-color: #444444;
   color: white;
   display: flex;
   align-items: center;
 
-  padding: 1rem 2rem;
+  padding: 5px 20px;
 
   &__icon{
       fill: white;
