--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="page">
+<div class="app-page">
     <app-page-header pageTitle="Dashboard" ></app-page-header>
   <h1>Page Dashboard</h1>
 </div>
