--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -1,6 +1,6 @@
-<div class="page">
+<div class="app-page">
     <app-page-header pageTitle="Inventories" ></app-page-header>
-    <div class="page__content">
+    <div class="app-page__content">
         <router-outlet></router-outlet>
     </div>
 </div>
