--- a/src/app/inventories/inventory-list/inventory-list-item/inventory-list-item.component.html
+++ b/src/app/inventories/inventory-list/inventory-list-item/inventory-list-item.component.html
@@ -1,3 +1,13 @@
-<p>
-  inventory-list-item works!
-</p>
+  <td class="table__data">
+    {{ inventory.product }}
+  </td>
+  <td class="table__data">
+    {{ inventory.quantity }}
+  </td>
+  <td class="table__data">
+    {{ inventory.status }}
+  </td>
+  <td class="table__data">
+    {{ inventory.location }}
+  </td>
+
