--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="row" >
+<div >
   <app-navigation-header brandTitle="Inventory Management" ></app-navigation-header>
-  <div class="row">
+  <div>
     <router-outlet></router-outlet>
   </div>
 </div>
