--- a/src/app/common/navigation-header/navigation-header.component.html
+++ b/src/app/common/navigation-header/navigation-header.component.html
@@ -1,6 +1,6 @@
-<div class="row">
-  <div class="nav">
-    <div class="nav__brand"> {{ brandTitle }} </div>
+<div>
+  <div class="app-nav">
+    <div class="app-nav__brand"> {{ brandTitle }} </div>
     <app-navigation-menu></app-navigation-menu>
   </div>
 </div>
