--- a/src/app/inventories/inventory-list/inventory-list.component.html
+++ b/src/app/inventories/inventory-list/inventory-list.component.html
@@ -1,27 +1,57 @@
-<div class="container">
-    <div class="row">
-        <div class="form-group">
-              <label class="form__label" for="search">Search Inventories</label>
-              <input class="form__input" type="text">
-              <button class="btn btn-default">Search</button>
-              <button class="btn btn-default">Advance Search</button>
+<div class="app-container">
+    <div class="app-row">
+        <div class="app-form-group">
+              <label class="app-form__label" for="search">Search Inventories</label>
+              <input class="app-form__input" type="text">
+              <button class="app-btn">Search</button>
+              <button class="app-btn">Advance Search</button>
         </div>
     </div>
 
-    <div class="row">
-        <table class="table table--bordered">
+    <div class="app-row">
+        <table class="app-table app-table--bordered">
             <thead class="table__head" >
                 <tr class="table__row">
-                    <th class="table__header"> Product </th>
-                    <th class="table__header"> Quantity </th>
-                    <th class="table__header"> Status </th>
-                    <th class="table__header"> Location </th>
+                    <th class="app-table__header"> Product </th>
+                    <th class="app-table__header"> Quantity </th>
+                    <th class="app-table__header"> Status </th>
+                    <th class="app-table__header"> Location </th>
                 </tr>
             </thead>
-            <tbody class="table__body" >
-
+            <tbody class="app-table__body" >
+                <tr class="app-table__row" *ngFor="let inventory of inventories"
+                    (click)="onRowClick(inventory.id)" style="cursor: pointer;" >
+                    <td class="app-table__data">
+                        {{ inventory.product }}
+                      </td>
+                      <td class="app-table__data">
+                        {{ inventory.quantity | number }}
+                      </td>
+                      <td class="app-table__data">
+                        {{ inventory.status }}
+                      </td>
+                      <td class="app-table__data">
+                        {{ inventory.location }}
+                      </td>
+                </tr>
             </tbody>
         </table>
+    </div>
+    <div class="app-row">
+      <div class="app-page__nav">
+          <div class="app-group">
+            <button class="app-btn">Prev</button>
+            <button class="app-btn">Next</button>
+          </div>
+          <div class="app-group">
+            <select>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+            </select>
+            <span> OF 20</span>
+          </div>
+      </div>
     </div>
 </div>
 
