--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -1,15 +1,27 @@
-.page {
+.app-page {
 
   &__content{
+    width: 90%;
+    // color: red;
+    margin: 0 auto;
+    padding: 20px 0;
 
-    margin: 0 4rem;
-    padding: 2rem 0;
+  }
 
+  &__nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
 }
 
 
-.container {
+.app-container {
 
 }
+
+.app-row{
+  margin: 10px 0;
+}
+
