--- a/src/app/inventories/inventory-form/inventory-form.component.html
+++ b/src/app/inventories/inventory-form/inventory-form.component.html
@@ -1,3 +1,38 @@
-<p>
-  inventory-form works!
-</p>
+<div class="app-form-container">
+    <div class="app-form-row app-form-row--2">
+          <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">Product</label>
+                <input class="app-form__input" type="text" placeholder="Product Name" >
+          </div>
+          <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">Quantity</label>
+                <input class="app-form__input" type="text" placeholder="Quantity" >
+          </div>
+    </div>
+    <div class="app-form-row app-form-row--2">
+          <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">SKU</label>
+                <input class="app-form__input" type="text" placeholder="SKU" >
+          </div>
+          <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">Status</label>
+                <input class="app-form__input" type="text" placeholder="Status" >
+          </div>
+    </div>
+    <div class="app-form-row app-form-row--2">
+        <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">Threshold Critical</label>
+                <input class="app-form__input" type="text" placeholder="Threshold Critical" >
+        </div>
+        <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">Threshold Warning</label>
+                <input class="app-form__input" type="text" placeholder="Threshold Warning" >
+        </div>
+    </div>
+    <div class="app-form-row app-form-row--2">
+        <div class="app-form-row__col">
+                <label class="app-form__label app-form__label--right" for="product">Location</label>
+                <input class="app-form__input" type="text" placeholder="Location" >
+        </div>
+    </div>
+</div>
