--- a/src/scss/components/_page.scss
+++ b/src/scss/components/_page.scss
@@ -2,13 +2,13 @@
 
   &__content{
     width: 90%;
-    // color: red;
+    // background-color: red;
     margin: 0 auto;
     padding: 20px 0;
 
   }
 
-  &__nav{
+  &__control{
     display: flex;
     align-items: center;
     justify-content: space-between;
