--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -10,19 +10,23 @@
     &__label {
       margin: 0 1rem;
       font-size: 1.2rem;
+
+      &--right {
+        text-align: right;
+      }
     }
 
     &__input {
-      width: 30%;
+
       margin: 0 1rem;
       font-size: 1.3rem;
-      padding: 5px 1rem;
+      padding: 5px 5px;
 
       border: 1px solid #cccccc;
       border-radius: 5px;
 
       transition: all 0.3s;
-      //width: 100%;
+
 
       &::placeholder{
         color: #cccccc;
@@ -30,6 +34,10 @@
 
       &:focus{
         border: 1px solid #333333;
+      }
+
+      &--30{
+        width: 30%;
       }
     }
 
