Inventories Layout format

--- a/src/app/inventories/inventories.component.html
+++ b/src/app/inventories/inventories.component.html
@@ -1,6 +1,6 @@
 <div class="app-page">
     <app-page-header pageTitle="Inventories" ></app-page-header>
-    <div class="app-page__content">
+    <div class="app-page__content app-page__content--80 ">
         <router-outlet></router-outlet>
     </div>
 </div>
