--- a/src/app/inventories/inventory-detail/inventory-transaction-list/inventory-transaction-list.component.html
+++ b/src/app/inventories/inventory-detail/inventory-transaction-list/inventory-transaction-list.component.html
@@ -24,11 +24,11 @@
 </table>
 <div class="app-row">
     <div class="app-page__control">
-        <div class="app-group">
+        <div class="control-group">
           <button class="app-btn">Prev</button>
           <button class="app-btn">Next</button>
         </div>
-        <div class="app-group">
+        <div class="control-group control-group--right">
           <select>
             <option value="1">1</option>
             <option value="2">2</option>
