--- a/src/app/inventories/inventory-detail/inventory-detail.component.html
+++ b/src/app/inventories/inventory-detail/inventory-detail.component.html
@@ -1,20 +1,23 @@
 <div class="app-container">
     <div class="app-row">
-        <app-inventory-form></app-inventory-form>
-        <div class="app-page__control">
-            <div class="app-group">
-                <button class="app-btn">Add Transaction</button>
-                <button class="app-btn">Edit</button>
-              </div>
-              <div class="app-group">
-                  <button class="app-btn">Delete</button>
-              </div>
-        </div>
+      <div class="app-col app-col--80">
+          <app-inventory-form [inventory]="inventory" [readOnly]="readOnly" ></app-inventory-form>
+          <div class="app-page__control" *ngIf="readOnly" >
+              <div class="control-group">
+                  <button class="app-btn" (click)="onBackToList()" >Back To Inventory List</button>
+                </div>
+                <div class="control-group control-group--right">
+                    <button class="app-btn">Add Transaction</button>
+                    <button class="app-btn" (click)="onEditItem()" >Edit</button>
+                    <button class="app-btn">Delete</button>
+                </div>
+          </div>
+      </div>
     </div>
-
-    <div class="app-page__content">
-        <div class="app-row">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
+    <hr>
+      <div class="app-row">
+          <div class="app-col app-col--80">
+              <router-outlet></router-outlet>
+          </div>
+      </div>
 </div>
