--- a/src/scss/components/_form-container.scss
+++ b/src/scss/components/_form-container.scss
@@ -11,6 +11,10 @@
   display: grid;
   grid-column-gap: 10px;
 
+  &--1 {
+    grid-template-columns: 1fr;
+  }
+
   &--2 {
     grid-template-columns: 1fr 1fr;
   }
@@ -18,6 +22,18 @@
   &__col{
     display: grid;
     grid-column-gap: 10px;
-    grid-template-columns: 1fr 2fr;
+
+
+    &--1x2 {
+      grid-template-columns: 1fr 2fr;
+    }
+
+    &--1x2x1x2 {
+      grid-template-columns: 1fr 2fr 1fr 2fr;
+    }
+
+    &--2 {
+      grid-column: 2 / -1;
+    }
   }
 }
