New Inventory Page

--- a/src/app/inventories/inventory-form/inventory-form.component.html
+++ b/src/app/inventories/inventory-form/inventory-form.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="inventoryForm" >
+    <h4>{{ formTitle }} </h4>
     <div class="app-form-container">
             <div class="app-form-row app-form-row--2">
                   <div class="app-form-row__col app-form-row__col--1x2">
