--- a/src/app/inventories/inventory-list/inventory-list.component.html
+++ b/src/app/inventories/inventory-list/inventory-list.component.html
@@ -8,7 +8,7 @@
                 <button class="app-btn">Advance Search</button>
             </div>
             <div class="control-group control-group--right">
-                <button class="app-btn">New Inventory</button>
+                <button class="app-btn" (click)="onItemNew()" >New Inventory</button>
                 <button class="app-btn">Create Report</button>
             </div>
       </div>
