--- a/src/app/inventories/inventory-new/inventory-new.component.html
+++ b/src/app/inventories/inventory-new/inventory-new.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
     <div class="app-row">
       <div class="app-col app-col--80">
-          <app-inventory-form></app-inventory-form>
+          <app-inventory-form formTitle="New Inventory" [newForm]="'true'" ></app-inventory-form>
              <div class="app-page__control" >
           </div>
       </div>
