--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,4 +1,7 @@
 
 <div class="page">
     <app-page-header pageTitle="Products" ></app-page-header>
+    <div class="app-page__content app-page__content--80 ">
+        <router-outlet></router-outlet>
+    </div>
 </div>
